--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>投稿一覧</h1>
+<h2 style="color: #99CCCC; text-align: center;">投稿一覧</h2>
 <div clas="container">
   <div class="row">
     <table class="table">
@@ -14,7 +14,9 @@
       <tbody>
         <% @posts.each do |post| %>
         <tr>
-          <td><%= image_tag post.user.get_profile_image, size:'50x50' %></td>
+          <td>
+            <%= image_tag post.user.get_profile_image, size:'50x50' %>
+          </td>
           <td><%= post.user.nickname %></td>
           <td>
             <%= link_to admin_post_path(post) do %>
