--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>ユーザー一覧</h1>
+<h2 style="text-align: center;">ユーザー一覧</h2>
 <div class="container">
   <div class="row">
     <table class="table">
@@ -14,7 +14,13 @@
       <tbody>
         <% @users.each do |user| %>
           <tr>
-            <td><%= image_tag user.get_profile_image, size:'50x50' %></td>
+            <td>
+              <% if user.profile_image.attached? %>
+                <%= image_tag user.profile_image, size: "100x100" %>
+              <% else %>
+                <%= image_tag 'no_image', size: "100x100" %>
+              <% end %>
+            </td>
             <td>
               <%= link_to admin_user_path(user) do %>
                 <%= user.nickname %>
