--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container pt-5">
   <div class="row">
-    <div class="col-md-3 border border-3 border-primary rounded">
+    <div class="col-md-3">
       <h2>PROFILE</h2>
       <%= render 'public/users/info', user: @user %>
       <div>
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="offset-3">
-      <h3 class="border-top">ブックマーク一覧</h3>
+      <h3>ブックマーク一覧</h3>
     <table class="table table-container" style="display: block; overflow-y: scroll; height: calc(100vh/2);">
     　<thead>
         <tr>
