--- a/app/views/public/posts/search.html.erb
+++ b/app/views/public/posts/search.html.erb
@@ -4,17 +4,24 @@
     <table class="table">
       <thead>
         <tr>
-          <th></th>
-          <th>投稿者</th>
-          <th>商品名</th>
-          <th>評価</th>
-          <th>タグ</th>
+          <th style="background-color: #8EB8FF;"></th>
+          <th style="background-color: #8EB8FF;">投稿者</th>
+          <th style="background-color: #8EB8FF;">商品名</th>
+          <th style="background-color: #8EB8FF;">評価</th>
+          <th style="background-color: #8EB8FF;">タグ</th>
+          <th style="background-color: #8EB8FF;">投稿日時</th>
         </tr>
       </thead>
       <tbody>
         <% @posts.each do |post| %>
         <tr>
-          <td><%= image_tag post.user.get_profile_image, size:'50x50' %></td>
+          <td>
+            <% if post.user.profile_image.attached? %>
+              <%= image_tag post.user.profile_image, size: "50x50" %>
+            <% else %>
+              <%= image_tag 'no_image.jpg', size: "50x50" %>
+            <% end %>
+          </td>
           <td>
             <%= link_to my_page_path(post.user_id) do %>
               <%= post.user.nickname %>
@@ -45,6 +52,7 @@
               <span><%= tag.name %></span>
             <% end %>
           </td>
+          <td><%= l post.created_at %></td>
           <td id="book_mark_buttons_<%= post.id %>">
             <%= render "public/book_marks/bookmark", post: post %>
           </td>
